[gd_scene load_steps=5 format=3 uid="uid://cx3khjfwmhdw2"]

[ext_resource type="Script" uid="uid://cs6oiv8yujn3c" path="res://scripts/office.gd" id="1_2u4vx"]
[ext_resource type="Texture2D" uid="uid://dbiye66tjgvl1" path="res://assets/art/task_board.png" id="2_n0wcf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(200, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(100, 150)

[node name="Office" type="Node2D"]
script = ExtResource("1_2u4vx")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Desk" type="Area2D" parent="."]
position = Vector2(640, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Desk"]

[node name="CoffeeMachine" type="Area2D" parent="."]
position = Vector2(1000, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoffeeMachine"]
shape = SubResource("RectangleShape2D_2")

[node name="Sprite2D" type="Sprite2D" parent="CoffeeMachine"]

[node name="TaskBoard" type="TextureButton" parent="."]
offset_left = 63.0
offset_top = 41.0
offset_right = 477.0
offset_bottom = 378.0
texture_normal = ExtResource("2_n0wcf")
stretch_mode = 5

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatsContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_constants/separation = 20

[node name="MoneyLabel" type="Label" parent="UI/StatsContainer"]
layout_mode = 2
text = "Money: $1000"

[node name="EnergyLabel" type="Label" parent="UI/StatsContainer"]
layout_mode = 2
text = "Energy: 100%"

[node name="ChaosLabel" type="Label" parent="UI/StatsContainer"]
layout_mode = 2
text = "Chaos: 0%"

[node name="Tooltip" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
text = "Click objects to interact"
horizontal_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[connection signal="input_event" from="Desk" to="." method="_on_desk_input_event"]
[connection signal="mouse_entered" from="Desk" to="." method="_on_desk_mouse_entered"]
[connection signal="mouse_exited" from="Desk" to="." method="_on_desk_mouse_exited"]
[connection signal="input_event" from="CoffeeMachine" to="." method="_on_coffee_machine_input_event"]
[connection signal="mouse_entered" from="CoffeeMachine" to="." method="_on_coffee_machine_mouse_entered"]
[connection signal="mouse_exited" from="CoffeeMachine" to="." method="_on_coffee_machine_mouse_exited"]
[connection signal="mouse_entered" from="TaskBoard" to="." method="_on_task_board_mouse_entered"]
[connection signal="mouse_exited" from="TaskBoard" to="." method="_on_task_board_mouse_exited"]
[connection signal="pressed" from="TaskBoard" to="." method="_on_task_board_pressed"]
